--- a/style.css
+++ b/style.css
@@ -1,4 +1,12 @@
 
+body {
+    background-color: rgb(224, 199, 199);
+}
+
+header{
+    font-size: 36px;
+    text-align: center;
+}
 
 #search {
   width: 50%;
@@ -11,8 +19,12 @@
 }
 
 .top-news {
-    display: inline;
     width: 65%;
+    border: 4px solid darkgray;
+    padding: 20px;
+    margin: 10px;
+    background-color: aliceblue;
+
 }
 
 #submit {
@@ -36,7 +48,13 @@
 
 #sidebox {
     height: 600px;
-    border: 4px solid black;
+    border: 1px solid black;
     width: 25%;
+    padding: 4px;
     float: right;
+}
+
+.centerAndSide {
+    display: flex;
+    padding: 0 0 0 8px;
 }
